--- a/cfg/_core.cfg
+++ b/cfg/_core.cfg
@@ -19,8 +19,8 @@ mirv_campath hold 1						// Hold the campath at start and end
 mirv_viewmodel enabled 1				// Custom viewmodel (0 -> disabled, 1 -> enabled)
 mirv_viewmodel set 2.5 2 -2 68 0		// Custom viewmodel parameters (mirv_viewmodel set <horizontal_offset> <depth_offset> <vertical_offset> <fov> <0 - right_handed | 1 - left_handed>)
 fov_cs_debug 0							// POV FOV (anything but zero disables scope zoom animation)
-hud1									// HUD mode (hud0 -> off, hud1 -> on, hud2 -> show killfeed & crosshair only)"
 crosshair 1								// Crosshair visibility (0 -> disabled, 1 -> enabled)
+hud1									// HUD mode (hud0 -> off, hud1 -> on, hud2 -> show killfeed & crosshair only)"
 
 // Audio
 snd_toolvolume 0.1						// Volume of the sounds produced by 'play' command (0 -> disabled; 1 -> max volume)
@@ -54,8 +54,8 @@ alias "edit" "screen; audio; camera; campath"
 edit
 
 // Streams flags (commands that will be activated when you start/stop recording)
-alias "startRecordingCommands" "cl_drawhud 0; r_drawviewmodel 1; bloom1; near1; mirv_campath draw enabled 0; toggleconsole"	
-alias "stopRecordingCommands" "cl_drawhud 1; r_drawviewmodel 1; bloom1; near1; mirv_campath draw enabled 1"
+alias "startRecordingCommands" "mirv_campath draw enabled 0; toggleconsole"	
+alias "stopRecordingCommands" "mirv_campath draw enabled 1"
 
 
 
@@ -105,12 +105,12 @@ mirv_deathmsg filter clear											// Reset filters
 mp_display_kill_assists 0											// Disable assists in the killfeed
 
 // HUD
-bind "f5" "toggle cl_drawhud 1 0; play \sounds\ui\beepclear.vsnd_c"
-alias "hud0" "cl_drawhud 0; echo HUD has been DISABLED; play \sounds\buttons\blip1.vsnd_c"
-alias "hud1" "cl_drawhud 1; cl_draw_only_deathnotices 0; echo HUD has been ENABLED; play \sounds\ui\beepclear.vsnd_c"
-alias "hud2" "cl_drawhud 1; cl_draw_only_deathnotices 1; echo Simplified HUD has been ENABLED (killfeed & crosshair only); play \sounds\ui\beepclear.vsnd_c"
-r_show_build_info 0						// Build info
-cl_spec_show_bindings 0					// Label under the player info border
+bind "f5" "toggle cl_drawhud 1 0; toggle cl_draw_only_deathnotices 0 1; play \sounds\ui\beepclear.vsnd_c"
+alias "hud0" "cl_drawhud 0; cl_draw_only_deathnotices 1; echo (hud0) HUD has been DISABLED; play \sounds\buttons\blip1.vsnd_c"
+alias "hud1" "cl_drawhud 1; cl_draw_only_deathnotices 0; echo (hud1) HUD has been ENABLED; play \sounds\ui\beepclear.vsnd_c"
+alias "hud2" "cl_drawhud 1; cl_draw_only_deathnotices 1; echo (hud2) Simplified HUD has been ENABLED (killfeed & crosshair only); play \sounds\ui\beepclear.vsnd_c"
+r_show_build_info 0			// Build info
+cl_spec_show_bindings 0		// Label under the player info border
 
 // Main menu
 alias "reset" "exec _reset; play \sounds\physics\water\water_splash_02.vsnd_c"
