--- a/cfg/_editing.cfg
+++ b/cfg/_editing.cfg
@@ -7,8 +7,8 @@ alias "fei" "exec _editinginfo; echo Long time no see!; play \sounds\ui\item_pap
 alias "fer" "ferCAMPATH; ferKILLFEED; ferMISC; ferSTREAMS; echo Pyre, pyre, pants on fire!; play \sounds\weapons\molotov\fire_ignite_2.vsnd_c"
 alias "ferCAMPATH" "mirv_campath select none; mirv_campath clear; mirv_camio import end; mirv_campath edit interp position default; mirv_campath edit interp rotation default; mirv_campath edit interp fov default"
 alias "ferKILLFEED" "mirv_deathmsg clear; mirv_deathmsg lifeTime default; mirv_deathmsg localplayer default; mirv_deathmsg filter clear; mirv_deathmsg filter add noscope=0 thrusmoke=0 attackerblind=0"
-alias "ferMISC" "rope_shake 0; sv_gravity 800; cl_phys_timescale 1"
-alias "ferSTREAMS" "r_dof_override 0; r_dof2_maxblursize 5; r_dof2_radiusscale 0.25; r_dof_override_tilt_to_ground 0.5; r_dof_override_near_blurry -100; r_dof_override_near_crisp 0; r_dof_override_far_crisp 50; r_dof_override_far_blurry 150; r_csgo_effects_bloom 1; r_csgo_render_post_bloom 1; fov_cs_near_z 6.5"
+alias "ferMISC" "rope_shake 0; sv_gravity 800; ragdoll_gravity_scale 1; ragdoll_friction_scale 0.6; cl_player_ragdolls_collide 0; cl_phys_timescale 1"
+alias "ferSTREAMS" "r_drawviewmodel 1; r_csgo_effects_bloom 1; r_csgo_render_post_bloom 1; fov_cs_near_z 6.5; r_dof_override 0; r_dof2_maxblursize 5; r_dof2_radiusscale 0.25; r_dof_override_tilt_to_ground 0.5; r_dof_override_near_blurry -100; r_dof_override_near_crisp 0; r_dof_override_far_crisp 50; r_dof_override_far_blurry 150"
 
 // 'fe' subconfigs
 alias "controls" "exec _controlsinfo; play \sounds\ui\item_paper_pickup.vsnd_c"
@@ -17,7 +17,7 @@ alias "ffmpeg" "exec _ffmpeg; play \sounds\ui\item_paper_pickup.vsnd_c"
 alias "pov" "exec _povinfo; play \sounds\ui\item_paper_pickup.vsnd_c"	
 alias "animate" "exec _animateinfo; play \sounds\ui\item_paper_pickup.vsnd_c"
 alias "misc" "exec _miscinfo; play \sounds\ui\item_paper_pickup.vsnd_c"
-alias "resetmisc" "rope_shake 0; sv_gravity 800; cl_phys_timescale 1; echo +reset_misc; play \sounds\physics\water\water_splash_02.vsnd_c"
+alias "resetmisc" "rope_shake 0; sv_gravity 800; ragdoll_gravity_scale 1; ragdoll_friction_scale 0.6; cl_player_ragdolls_collide 0; cl_phys_timescale 1; echo +reset_misc; play \sounds\physics\water\water_splash_02.vsnd_c"
 
 
 
