--- a/cfg/_fake.cfg
+++ b/cfg/_fake.cfg
@@ -81,7 +81,7 @@ alias "botstop_on" "bot_stop 1; alias botstop botstop_off; play \sounds\buttons\
 alias "botstop_off" "bot_stop 0; alias botstop botstop_on; play \sounds\ui\beepclear.vsnd_c; echo [O] Bots have been unstoped (bot_stop 0)"
 bind "p" "play \sounds\ui\buttonclickrelease.vsnd_c; bot_place; echo [P] Bot has been placed in the position you're looking at (bot_place)"
 bind "k" "play \sounds\ambient\playonce\weather\thunder4.vsnd_c; bot_kill; echo [K] Bots have been killed (bot_kill)"
-bind "backspace" "play \sounds\ambient\wind\wind_snippet4.vsnd_c; bot_quota 0; echo [Backspace] Bots have been kicked (bot_quota 0)"
+bind "backspace" "play \sounds\ambient\wind\wind_snippet4.vsnd_c; bot_kick; echo [Backspace] Bots have been kicked (bot_kick)"
 
 // Respawn
 alias "respawn1" "mp_respawn_on_death_ct 1; mp_respawn_on_death_t 1; echo AUTO-RESPAWN has been ENABLED (restart the game [F1] to apply changes) (mp_respawn_on_death_ct 1; mp_respawn_on_death_t 1); play \sounds\ui\beepclear.vsnd_c"
