--- a/cfg/_miscinfo.cfg
+++ b/cfg/_miscinfo.cfg
@@ -1,15 +1,14 @@
-
-
-
 echo ""
 echo ""
 echo "____________________________[MISC]_____________________________"
-echo "resetmisc             -> reset all misc commands (reset settings)"
+echo "resetmisc -> reset all misc commands (reset settings)"
 echo ""
-echo "rope_shake <1/0>      -> toggle rope shaking (default: disabled)"
-echo "sv_gravity 600        -> gravity force (default: 800)"
-echo "cl_phys_timescale 0.5 -> ragdolls playback speed (default: 1)"
+echo "rope_shake <1/0>                  -> toggle rope shaking (default: 0)"
+echo "sv_gravity <value>                -> gravity force (default: 800)"
+echo "ragdoll_gravity_scale <value>     -> ragdoll gravity (def: 1)"
+echo "ragdoll_friction_scale  <value>   -> ragdoll friction (def: 0.6)"
+echo "cl_player_ragdolls_collide <1/0>  -> toggle ragdolls collide with each other (def: 0)"
+echo "cl_phys_timescale <value>         -> ragdolls playback speed (default: 1)"
 echo "_______________________________________________________________"
 echo ""
 echo ""
-
