--- a/cfg/_streams.cfg
+++ b/cfg/_streams.cfg
@@ -2,19 +2,23 @@
 //COMMANDS//
 ////////////
 
+// Viewmodel
+alias "viewmodel1" "r_drawviewmodel 1; echo (viewmodel1) VIEWMODEL has been ENABLED"
+alias "viewmodel0" "r_drawviewmodel 0; echo (viewmodel0) VIEWMODEL has been DISABLED"
+
 // Bloom
-alias "bloom1" "r_csgo_effects_bloom 1; r_csgo_render_post_bloom 1; echo BLOOM is ENABLED"
-alias "bloom0" "r_csgo_effects_bloom 0; r_csgo_render_post_bloom 0; echo BLOOM is DISABLED"
+alias "bloom1" "r_csgo_effects_bloom 1; r_csgo_render_post_bloom 1; echo (bloom1) BLOOM has been ENABLED"
+alias "bloom0" "r_csgo_effects_bloom 0; r_csgo_render_post_bloom 0; echo (bloom0) BLOOM has been DISABLED"
 
 // Near clipping
-alias "near1" "fov_cs_near_z 6.5; echo NEAR CLIPPING is ENABLED"
-alias "near0" "fov_cs_near_z 0.1; echo NEAR CLIPPING is DISABLED"
+alias "near1" "fov_cs_near_z 6.5; echo (near1) NEAR CLIPPING has been ENABLED"
+alias "near0" "fov_cs_near_z 0.1; echo (near0) NEAR CLIPPING has been DISABLED"
 
 // DOF (slightly improved version of Nathan's dof.cfg)
 bind "/" "dof"
 alias "dof" "dof_on"
-alias "dof_on" "alias dof dof_off; r_dof_override 1; echo DOF is ENABLED; play \sounds\ui\beepclear.vsnd_c"
-alias "dof_off" "alias dof dof_on; r_dof_override 0; echo DOF is DISABLED; play \sounds\buttons\blip1.vsnd_c"
+alias "dof_on" "alias dof dof_off; r_dof_override 1; echo DOF has been ENABLED; play \sounds\ui\beepclear.vsnd_c"
+alias "dof_off" "alias dof dof_on; r_dof_override 0; echo DOF has been DISABLED; play \sounds\buttons\blip1.vsnd_c"
 
 alias "dofState1" "r_dof_override_near_blurry -100; r_dof_override_near_crisp 0; r_dof_override_far_crisp 0; r_dof_override_far_blurry 50; alias next_dof_state dofState2;"
 alias "dofState2" "r_dof_override_near_blurry -100; r_dof_override_near_crisp 0; r_dof_override_far_crisp 50; r_dof_override_far_blurry 150; alias next_dof_state dofState3; alias prev_dof_state dofState1"
