--- a/cfg/_streamsinfo.cfg
+++ b/cfg/_streamsinfo.cfg
@@ -10,9 +10,10 @@ echo "camera  -> camera data"
 echo "campath -> campath data"
 echo ""
 echo "Flags:"
-echo "<bloom0/bloom1>  -> toggle bloom (def: enabled)
-echo "<near0/near1>    -> toggle near clipping (near0: no near clipping but glitchy far objects, near1: vice versa) (def: enabled)
-echo "[/] <dof1/dof0>  -> toggle dof" (def: disabled)
+echo "<viewmodel0/viewmodel1> -> toggle viewmodel (def: enabled)"
+echo "<bloom0/bloom1>  -> toggle bloom (def: enabled)"
+echo "<near0/near1>    -> toggle near clipping (near0: no near clipping but glitchy far objects, near1: vice versa) (def: enabled)"
+echo "[/] <dof1/dof0>  -> toggle dof" (def: disabled)"
 echo "[<] [>]          -> move dof focus point 'closer to you/further away'"
 echo "_______________________________________________________________"
 echo ""
