--- a/cfg/_core.cfg
+++ b/cfg/_core.cfg
@@ -105,7 +105,11 @@ mirv_deathmsg filter clear											// Reset filters
 mp_display_kill_assists 0											// Disable assists in the killfeed
 
 // HUD
-bind "f5" "toggle cl_drawhud 1 0; toggle cl_draw_only_deathnotices 0 1; play \sounds\ui\beepclear.vsnd_c"
+bind "f5" "hud"
+alias "hud" "hud_off"
+alias "hud_on" "hud1; alias hud hud_off"
+alias "hud_off" "hud0; alias hud hud_on"
+
 alias "hud0" "cl_drawhud 0; cl_draw_only_deathnotices 1; echo (hud0) HUD has been DISABLED; play \sounds\buttons\blip1.vsnd_c"
 alias "hud1" "cl_drawhud 1; cl_draw_only_deathnotices 0; echo (hud1) HUD has been ENABLED; play \sounds\ui\beepclear.vsnd_c"
 alias "hud2" "cl_drawhud 1; cl_draw_only_deathnotices 1; echo (hud2) Simplified HUD has been ENABLED (killfeed & crosshair only); play \sounds\ui\beepclear.vsnd_c"
