new streams and fake cfg for dedicated server

--- a/cfg/_core.cfg
+++ b/cfg/_core.cfg
@@ -42,20 +42,36 @@ log_color General adffa7FF 				// Commands responce color (adffa7FF is light gre
 /////////////////////////
 
 // Output directory (specify the path to a folder you want to record files in)
-mirv_streams record name "D:\Screens"
-
-// Recording presets (view _ffmpeg.cfg for available presets)
-mirv_streams record screen settings utTrue			// Screen
-mirv_streams settings edit blur settings utTrue 	// Blur (obviously you can't use 'blur' preset, because it's not a codec, use utTrue/prores/good etc)
-mirv_streams settings edit blur fps 24 				// Blur output fps (blur_amount = recording_fps/blur_output_fps)
+mirv_streams record name "S:\Screens"
 
 // Streams presets
-alias "edit" "screen; audio; camera; campath"										
+alias "allstreams" "screen; 1beauty; 6depth; 6depthEXR; audio; camera; campath"
+alias "edit" "1beauty; 6depth; audio; camera; campath"
 edit
 
 // Streams flags (commands that will be activated when you start/stop recording)
 alias "startRecordingCommands" "mirv_campath draw enabled 0; toggleconsole"	
 alias "stopRecordingCommands" "mirv_campath draw enabled 1"
+
+// Recording presets (view _ffmpeg.cfg for available presets)
+mirv_streams settings edit blur settings utTrue 	// Blur (obviously you can't use 'blur' preset, because it's not a codec, use utTrue/prores/good etc)
+mirv_streams settings edit blur fps 24 				// Blur output fps (blur_amount = recording_fps/blur_output_fps)
+mirv_streams record screen settings uttrue			// Screen
+//mirv_streams edit 0hud settings prores
+mirv_streams edit 1beauty settings uttrue
+mirv_streams edit 6depth settings uttrue
+mirv_streams edit 6depthEXR settings afxClassic		// Don't change it, only .exr format is able to store 24 bit depth
+
+
+
+////////////////
+//MIRV_SCRIPTS//
+////////////////
+
+// Quick campoint input
+// mirv_script_load  "D:\Editing Tools\HLAE\resources\AfxHookSource2\snippets\mirv-script-point.js"
+// mirv_script_point debug 1				// Debug quick campoint input
+// bind "\" "mirv_script_point position; mirv_script_point angles; mirv_script_point fov; echo [\] You've been TELEPORTED to SELECTION (mirv_script_point position, mirv_script_point angles, mirv_script_point fov)"
 
 
 
@@ -129,8 +145,9 @@ echo "__________________________[MAIN-MENU]__________________________"
 echo "reset -> reset game settings"
 echo "fe    -> execute 'f'unny 'e'diting config (join the demo first 'playdemo <demo_name>')"
 echo "fake  -> execute fake demo config (you must do it before and after joining the map)"
+echo "exec _fakeserver; exec _fakeserver2 -> execute fake demo config for dedicated server (you must do it only after joining the server)"
 echo "__________________________[SUPPORT]____________________________  ______     "
-echo "Author -> youtube.com/@shy_rikki                               / ____ \    "
+echo "Author -> youtube.com/@shy_rikki                                / ____ \    "
 echo "Wiki -> github.com/eirisocherry/cs2-editing/wiki               / /    \ \   "
 echo "Need help? Join my discord -> check the channel description  __|_|    | |   "
 echo "____________________________________________________________/         | |   "
