--- a/cfg/_fakeserverinfo.cfg
+++ b/cfg/_fakeserverinfo.cfg
@@ -1,15 +1,15 @@
 echo ""
 echo ""
-echo "_________________________[FAKE DEMO]___________________________"
+echo "______________________[FAKE SERVER DEMO]_______________________"
 echo "Usage: 
-echo "1. Before joining the map type '_exec core' and 'fake'"
-echo "2. After joining the map type 'fake' or press [F1] to enable custom gamemode"
+echo "After joining the server type in 'exec _fakerserver` and `exec _fakeserver2`"
 echo ""
-echo "tv_record <name> -> start demo recording"
-echo "tv_stoprecord    -> end demo recording"
-echo "Demos folder     -> ..\Counter-Strike Global Offensive\game\csgo"
+echo "Then type in chat (not console):"
+echo "!rcon tv_record <name> -> start demo recording"
+echo "!rcon tv_stoprecord    -> end demo recording"
+echo "Demos folder           -> ..\Counter-Strike Global Offensive\game\csgo"
 echo "____________________________[BINDS]____________________________"
-echo "[F1] -> execute _fake.cfg (restart the game)"
+echo "[F1] -> restart the match"
 echo ""
 echo "[F2] -> buy AK/M4A4, p250, grenades & kevlar"
 echo "[F3] -> buy AWP, deagle, grenades & kevlar"
@@ -23,14 +23,14 @@ echo "[Right Shift] -> toggle thirdperson/firstperson"
 echo "[Enter]       -> toggle maya mode for thirdperson (alt + left click = rotation, alt + right click = zoom)"
 echo ""
 echo "[Hold Z] -> x10 speed"
-echo "[Mouse5] -> x0.4 speed / reset speed"
+echo "[Mouse5] -> x0.4 speed"
 echo "[Mouse4] -> reset speed"
 echo ""
 echo "Binds below may CRASH the game! Use at your own risk"
 echo "[>] -> add t"
 echo "[<] -> add ct"
 echo "[O] -> stop bots on/off" 
-echo "[P] -> place bot"
+echo "[P] -> place bot (doesn't work on dedicated server)"
 echo "[K] -> kill bots"
 echo "[BACKSPACE] -> kick bots"
 echo "____________________________[MISC]_____________________________"
@@ -40,8 +40,7 @@ echo "<sniper1/sniper0>   -> toggle crosshair for snipers (def: enabled)"
 echo "<nade1/nade0>       -> toggle nade preview (def: disabled)"
 echo "sv_hegrenade_damage_multiplier <value> -> hegrenade damage multiplier (def: 1)"
 echo "___________________________[CONFIGS]___________________________"
-echo "fake  -> execute _fake.cfg (restart the game)"
-echo "fakei -> show fake config information"
+echo "exec _fakeserverinfo -> show fake server config information"
 echo "items -> view the list of available items"
 echo "_______________________________________________________________"
 echo ""
