--- a/cfg/_streams.cfg
+++ b/cfg/_streams.cfg
@@ -61,6 +61,55 @@ alias "screen" "screen_on"
 alias "screen_on" "mirv_streams record screen enabled 1; alias screen screen_off; echo [+] SCREEN set to RECORD; play \sounds\ui\beepclear.vsnd_c"
 alias "screen_off" "mirv_streams record screen enabled 0; alias screen screen_on; echo [x] SCREEN NOT set to RECORD; play \sounds\buttons\blip1.vsnd_c"
 
+// 0hud
+//mirv_streams add normal 0hud
+//mirv_streams edit 0hud record 0
+//alias "0hud" "0hud_on"
+//alias "0hud_on" "mirv_streams edit 0hud record 1; alias 0hud 0hud_off; echo [+] 0hud stream set to RECORD; play \sounds\ui\beepclear.vsnd_c"
+//alias "0hud_off" "mirv_streams edit 0hud record 0; alias 0hud 0hud_on; echo [x] 0hud stream NOT set to RECORD; play \sounds\buttons\blip1.vsnd_c"
+//mirv_streams edit 0hud captureType rgba
+//mirv_streams edit 0hud clearBeforeUI 0.5 0.5 0.5 0
+
+// 1beauty
+mirv_streams add normal 1beauty
+mirv_streams edit 1beauty record 0
+alias "1beauty" "1beauty_on"
+alias "1beauty_on" "mirv_streams edit 1beauty record 1; alias 1beauty 1beauty_off; echo [+] 1beauty stream set to RECORD; play \sounds\ui\beepclear.vsnd_c"
+alias "1beauty_off" "mirv_streams edit 1beauty record 0; alias 1beauty 1beauty_on; echo [x] 1beauty stream NOT set to RECORD; play \sounds\buttons\blip1.vsnd_c"
+mirv_streams edit 1beauty capture beforeUi
+
+// 6depth
+mirv_streams add depth 6depth
+mirv_streams edit 6depth record 0
+alias "6depth" "6depth_on"
+alias "6depth_on" "mirv_streams edit 6depth record 1; alias 6depth 6depth_off; echo [+] 6depth stream set to RECORD; play \sounds\ui\beepclear.vsnd_c"
+alias "6depth_off" "mirv_streams edit 6depth record 0; alias 6depth 6depth_on; echo [x] 6depth stream NOT set to RECORD; play \sounds\buttons\blip1.vsnd_c"
+mirv_streams edit 6depth capture beforeUi
+mirv_streams edit 6depth captureType depthRgb
+mirv_streams edit 6depth depthCompositeSmoke 1
+mirv_streams edit 6depth depthVal 4096
+mirv_streams edit 6depth depthValMax 0
+mirv_streams edit 6depth depthChannels dithered
+mirv_streams edit 6depth depthMode pyramidalLinear
+//mirv_streams edit 6depth clearBeforeUI none
+mirv_streams edit 6depth autoForceFullResSmoke 1
+
+// 6depthEXR
+mirv_streams add depth 6depthEXR
+mirv_streams edit 6depthEXR record 0
+alias "6depthEXR" "6depthEXR_on"
+alias "6depthEXR_on" "mirv_streams edit 6depthEXR record 1; alias 6depthEXR 6depthEXR_off; echo [+] 6depthEXR stream set to RECORD; play \sounds\ui\beepclear.vsnd_c"
+alias "6depthEXR_off" "mirv_streams edit 6depthEXR record 0; alias 6depthEXR 6depthEXR_on; echo [x] 6depthEXR stream NOT set to RECORD; play \sounds\buttons\blip1.vsnd_c"
+mirv_streams edit 6depthEXR capture beforeUi
+mirv_streams edit 6depthEXR captureType depthF
+mirv_streams edit 6depthEXR depthCompositeSmoke 1
+mirv_streams edit 6depthEXR depthVal 0
+mirv_streams edit 6depthEXR depthValMax 25000
+mirv_streams edit 6depthEXR depthChannels gray
+mirv_streams edit 6depthEXR depthMode pyramidalLinear
+//mirv_streams edit 6depthEXR clearBeforeUI none
+mirv_streams edit 6depthEXR autoForceFullResSmoke 1
+
 
 
 ///////////////////
