--- a/cfg/_streamsinfo.cfg
+++ b/cfg/_streamsinfo.cfg
@@ -4,10 +4,14 @@ echo "___________________________[STREAMS]___________________________"
 echo "View _core.cfg and create your own streams preset"
 echo ""
 echo "Streams:"
-echo "screen  -> basic stream that records the screen"
-echo "audio   -> audio (type 'audioInfo' for more information)"
-echo "camera  -> camera data"
-echo "campath -> campath data"
+echo "screen    -> basic stream that records the screen (! it will be recorded outside the take folder)"
+//echo "0hud      -> hud (alpha; hud should be enabled in-game)"
+echo "1beauty   -> basic stream without hud"
+echo "6depth    -> depth map (black = 4096)"
+echo "6depthEXR -> 24bit depth map (black = 25000)"
+echo "audio     -> audio (type 'audioInfo' for more information)"
+echo "camera    -> camera data"
+echo "campath   -> campath data"
 echo ""
 echo "Flags:"
 echo "<viewmodel0/viewmodel1> -> toggle viewmodel (def: enabled)"
