--- a/cfg/_ffmpeg.cfg
+++ b/cfg/_ffmpeg.cfg
@@ -7,12 +7,15 @@ mirv_streams settings add ffmpeg utTrue "";
 mirv_streams settings add ffmpeg prores "";
 mirv_streams settings add ffmpeg good "";
 mirv_streams settings add ffmpegEx utTrueSplit "";
+mirv_streams settings add ffmpegEx x "";
 
 // Fill blank ffmpeg presets with parameters
-mirv_streams settings edit utTrue options "-c:v utvideo -pix_fmt gbrp {QUOTE}{AFX_STREAM_PATH}\\1beauty.avi{QUOTE}";
-mirv_streams settings edit prores options "-c:v prores -profile:v 4 -pix_fmt yuva444p10le -vf setsar=1:1,scale=out_color_matrix=bt709 -color_primaries bt709 -color_trc bt709 -colorspace bt709 {QUOTE}{AFX_STREAM_PATH}\\1beauty.mov{QUOTE}";
-mirv_streams settings edit good options "-c:v libx264 -crf 10 -preset fast -tune fastdecode -level:v 5.2 -vf setsar=1:1,zscale=matrix=709,format=yuv420p -color_primaries bt709 -color_trc bt709 -colorspace bt709 -x264-params keyint=12:min-keyint=1:ref=1:bframes=0:qcomp=0.8:aq-strength=0.5:dct-decimate=0:fast-pskip=0:deblock=-2,-2 {QUOTE}{AFX_STREAM_PATH}\\1beauty.mp4{QUOTE}";
+mirv_streams settings edit utTrue options "-c:v utvideo -pix_fmt gbrp {QUOTE}{AFX_STREAM_PATH}.avi{QUOTE}";
+mirv_streams settings edit prores options "-c:v prores -profile:v 4 -pix_fmt yuva444p10le -vf setsar=1:1,scale=out_color_matrix=bt709 -color_primaries bt709 -color_trc bt709 -colorspace bt709 {QUOTE}{AFX_STREAM_PATH}.mov{QUOTE}";
+mirv_streams settings edit good options "-c:v libx264 -crf 10 -preset fast -tune fastdecode -level:v 5.2 -vf setsar=1:1,zscale=matrix=709,format=yuv420p -color_primaries bt709 -color_trc bt709 -colorspace bt709 -x264-params keyint=12:min-keyint=1:ref=1:bframes=0:qcomp=0.8:aq-strength=0.5:dct-decimate=0:fast-pskip=0:deblock=-2,-2 {QUOTE}{AFX_STREAM_PATH}.mp4{QUOTE}";
 mirv_streams settings edit utTrueSplit options "{QUOTE}{FFMPEG_PATH}{QUOTE} -f rawvideo -pixel_format {PIXEL_FORMAT} -loglevel error -framerate {FRAMERATE} -video_size {WIDTH}x{HEIGHT} -i pipe:0 -filter_complex {QUOTE}[0]split=2[in_tl][in_tr]; [in_tl]crop=iw/2:ih/2:0:0[out_tl]; [in_tr]crop=iw/2:ih/2:iw/2:0[out_tr]{QUOTE} -c:v utvideo -pix_fmt gbrp -map [out_tl] {QUOTE}{AFX_STREAM_PATH}\\\\1beauty.avi{QUOTE} -c:v utvideo -pix_fmt gbrp -map [out_tr] {QUOTE}{AFX_STREAM_PATH}\\\\6depth.avi{QUOTE}";
+mirv_streams settings edit x options "{QUOTE}{FFMPEG_PATH}{QUOTE} -f rawvideo -pixel_format {PIXEL_FORMAT} -framerate {FRAMERATE} -video_size {WIDTH}x{HEIGHT} -i pipe:0 -filter_complex {QUOTE}[0]split=2[in_tl][in_tr]; [in_tl]crop=iw/2:ih/2:0:0,setsar=1:1[out_tl]; [in_tr]crop=iw/2:ih/2:iw/2:0[out_tr]{QUOTE} -c:v libx264 -crf 10 -x264-params keyint=12:min-keyint=1:bframes=0 -map [out_tl] {QUOTE}{AFX_STREAM_PATH}\\1.mp4{QUOTE} -c:v utvideo -pix_fmt gbrp -map [out_tr] {QUOTE}{AFX_STREAM_PATH}\\6.avi{QUOTE}";
+
 
 // Blur preset
 mirv_streams settings add sampler blur
